--- a/css/styles.css
+++ b/css/styles.css
@@ -65,3 +65,12 @@ header {
     border-color: rgba(61, 67, 86, 0.482);
 }
 
+/*google icon styling*/
+/*note: these are default settings*/
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
