--- a/css/styles.css
+++ b/css/styles.css
@@ -4,14 +4,12 @@ body {
     background-repeat: no-repeat;
     background-size: 400%;
     background-position: center;
-    height: 100vh;    
     color: rgb(186, 190, 206);
     font-family: "PT Sans", Calibri, Tahoma, sans-serif;
 }
 /*section is opaque to add aesthetic*/
 #page-content {
     background-color: rgba(0,0,0,0.3);
-    height: 100vh;
 }
 
 /*styling that organizes the header and its contents*/
@@ -73,4 +71,20 @@ header {
   'wght' 400,
   'GRAD' 0,
   'opsz' 24
+}
+
+/*styling for timers*/
+.timer {
+    height: 50vw;
+    width: 50vw;
+    border-radius: 50%;
+    border: 1vw solid rgb(186, 190, 206);
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+}
+
+.time {
+    font-size: 20vh;
 }
