--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-bottom: 2px solid rgba(61, 67, 86, 0.482);
+    border-bottom: 0.5vw solid rgba(61, 67, 86, 0.482);
     width: 95vw;
     margin-left: auto;
     margin-right: auto;
@@ -30,20 +30,20 @@ header {
 
 /*styling for the title and subtitles*/
 #main-title{
-    margin-right: 5px;
-    font-size: 50px;
+    margin-right: 0.4vw;
+    font-size: 10vw;
 }
 #subtitle0 {
-    margin-left: 5px;
-    font-size: 25px;
+    margin-left: 0.4vw;
+    font-size: 5vw;
 }
 #main-title, #subtitle0 {
     margin-bottom: 0;
 }
 #subtitle1 {
     margin-top: 0;
-    margin-bottom: 40px;
-    font-size: 16.5px;
+    margin-bottom: 2.5vw;
+    font-size: 3.25vw;
 }
 
 /*button styling*/
@@ -56,11 +56,12 @@ header {
     background-color: rgba(95, 96, 121, 0.5);
     margin-left: 5px;
     margin-right: 5px;
-    height:50px;
-    width: 150px;
+    height: 7vw;
+    width: 15vw;
     border-radius: 12px;
     color:rgb(186, 190, 206);
     border-color: rgba(61, 67, 86, 0.482);
+    font-size: 2vh;
 }
 
 /*google icon styling*/
@@ -86,5 +87,5 @@ header {
 }
 
 .time {
-    font-size: 20vh;
+    font-size: 20vw;
 }
