--- a/css/styles.css
+++ b/css/styles.css
@@ -83,12 +83,15 @@ header {
 }
 .time {
     font-size: 20vw;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 #timer-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 2vh;
+    margin-bottom: 2vh;
 }
 
 /*google icon styling*/
@@ -110,6 +113,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
+    width: auto;
 }
 
 /*style info at bottom of page*/
