--- a/css/styles.css
+++ b/css/styles.css
@@ -93,13 +93,20 @@ header {
     margin-top: 2vh;
     margin-bottom: 2vh;
 }
+.timer-controls {
+    background-color: rgb(186, 190, 206);
+    color: #1c4966;
+    border-radius: 50%;
+    margin-left: 2px;
+    margin-right: 2px;
+}
 
 /*google icon styling*/
 /*note: these are default settings*/
 .material-symbols-outlined {
     font-variation-settings:
-    'FILL' 0,
-    'wght' 400,
+    'FILL' 1,
+    'wght' 600,
     'GRAD' 0,
     'opsz' 24;
     font-size: 32px !important;
@@ -107,7 +114,7 @@ header {
 #replay {
     font-size: 24px !important;
     font-variation-settings: 
-    'wght' 600;
+    'wght' 800;
 }
 #control-container {
     display: flex;
